--- a/hachoir-parser/ChangeLog
+++ b/hachoir-parser/ChangeLog
@@ -2,6 +2,7 @@ hachoir-parser 1.3.5
 ====================
 
  * torrent parser handles empty strings
+ * fix issue #48: fix matroska parser, strip trailing null bytes
 
 hachoir-parser 1.3.4 (2010-07-26)
 =================================
