update my email address

--- a/hachoir-metadata/AUTHORS
+++ b/hachoir-metadata/AUTHORS
@@ -3,5 +3,5 @@ Feth Arezki <feth AT arezki.net> - Fix hachoir-metadata-qt to save the current d
 Jean-Marc Libs <jeanmarc.libs AT gmail.com> - KDE plugin
 Pierre THIERRY <nowhere.man AT levallois.eu.org> - KDE plugin
 Thomas PABST <thomas.pabst AT gmail.com> - Gnome plugin
-Victor Stinner aka haypo <victor.stinner AT haypocalc.com> - Metadata core
+Victor Stinner aka haypo <victor.stinner AT gmail.com> - Metadata core
 
