--- a/hachoir-gtk/AUTHORS
+++ b/hachoir-gtk/AUTHORS
@@ -1,3 +1,3 @@
 Mathieu Stumpf <psychoslave AT gmail.com>
-Victor Stinner <victor.stinner AT haypocalc.com>
+Victor Stinner <victor.stinner AT gmail.com>
 
